support page fragment includes

--- a/server/modules/rendering/markdown-embed/definition.yml
+++ b/server/modules/rendering/markdown-embed/definition.yml
@@ -2,10 +2,11 @@ key: markdownEmbed
 title: Embed
 description: |
    Markdown Block Embed (https://github.com/rotorz/markdown-it-block-embed) with extensions to support embeded Google docs, sheets, and Jira JQL results as Iframews 
-   - `@[gdoc]($docId)` 
-   - `@[sheet]($docId)`
-   - `@[deck]($docId)`
-   - `@[jira]($jql)`
+   - `@[gdoc]($docId)` : include google doc
+   - `@[sheet]($docId)` : include google sheet
+   - `@[deck]($docId)` : include google presentation
+   - `@[jira](jql)` : include jql results from configured jira server (cors must be enabled)
+   - `@[page]({url}#?{fragmentId})` : include fragment from another page
 
 author: mat.taylor
 icon: mdi-sitemap
