feat: admin ssl - renew cert + toggle redirection btn

--- a/server/app/data.yml
+++ b/server/app/data.yml
@@ -54,6 +54,8 @@ defaults:
       securityHSTSDuration: 300
       securityCSP: false
       securityCSPDirectives: ''
+    server:
+      sslRedir: false
     flags:
       ldapdebug: false
       sqllog: false
