--- a/dev/helm/templates/ingress.yaml
+++ b/dev/helm/templates/ingress.yaml
@@ -1,39 +1,31 @@
-{{- if .Values.ingress.enabled }}
-{{- range .Values.ingress.hosts  }}
+{{- if .Values.ingress.enabled -}}
 apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
   name: {{ template "wiki.fullname" $ }}
+  namespace: {{ .Release.Namespace | quote }}
   labels:
-    app: {{ template "wiki.name" $ }}
-    chart: {{ template "wiki.chart" $ }}
-    release: {{ $.Release.Name | quote }}
-    heritage: {{ $.Release.Service | quote }}
+    app.kubernetes.io/name: {{ template "wiki.name" $ }}
+    helm.sh/chart: {{ template "wiki.chart" $ }}
+    app.kubernetes.io/instance: {{ .Release.Name | quote }}
+    app.kubernetes.io/managed-by: {{ .Release.Service | quote }}
+  {{- with .Values.ingress.annotations }}
   annotations:
-    {{- if .tls }}
-    ingress.kubernetes.io/secure-backends: "true"
-    {{- end }}
-    {{- if .certManager }}
-    kubernetes.io/tls-acme: "true"
-    {{- end }}
-    {{- range $key, $value := .annotations }}
-    {{ $key }}: {{ $value | quote }}
-    {{- end }}
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
 spec:
-  rules:
-  - host: {{ .name }}
-    http:
-      paths:
-        - path: {{ default "/" .path }}
-          backend:
-            serviceName: {{ template "wiki.fullname" $ }}
-            servicePort: 80
-{{- if .tls }}
+{{- if .Values.ingress.tls }}
   tls:
-  - hosts:
-    - {{ .name }}
-    secretName: {{ .tlsSecret }}
+    - hosts:
+        - {{ .Values.ingress.host | quote }}
+      secretName: {{ printf "%s-tls" (include "wiki.fullname" $) | quote }}
 {{- end }}
----
-{{- end }}
+  rules:
+    - host: {{ .Values.ingress.host | quote }}
+      http:
+        paths:
+          - path: /
+            backend:
+              serviceName: {{ template "wiki.fullname" $ }}
+              servicePort: http
 {{- end }}
