--- a/dev/helm/templates/service.yaml
+++ b/dev/helm/templates/service.yaml
@@ -1,32 +1,20 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ template "wiki.fullname" . }}
+  name: {{ template "wiki.fullname" $ }}
+  namespace: {{ .Release.Namespace | quote }}
   labels:
-    app: {{ template "wiki.name" . }}
-    chart: {{ template "wiki.chart" . }}
-    release: {{ .Release.Name | quote }}
-    heritage: {{ .Release.Service | quote }}
+    app.kubernetes.io/name: {{ template "wiki.name" $ }}
+    helm.sh/chart: {{ template "wiki.chart" $ }}
+    app.kubernetes.io/instance: {{ .Release.Name | quote }}
+    app.kubernetes.io/managed-by: {{ .Release.Service | quote }}
 spec:
-  type: {{ .Values.service.type }}
-  {{- if .Values.service.loadBalancerIP }}
-  loadBalancerIP: {{ .Values.service.loadBalancerIP }}
-  {{- end }}
-  {{- if (or (eq .Values.service.type "LoadBalancer") (eq .Values.service.type "NodePort")) }}
-  externalTrafficPolicy: {{ .Values.service.externalTrafficPolicy | quote }}
-  {{- end }}
+  type: {{ default .Values.service.type "ClusterIP" }}
   ports:
-  - name: http
-    port: {{ .Values.service.port }}
+  - port: {{ default .Values.service.port 80 }}
     targetPort: http
-    {{- if (and (eq .Values.service.type "NodePort") (not (empty .Values.service.nodePorts.http)))}}
-    nodePort: {{ .Values.service.nodePorts.http }}
-    {{- end }}
-  - name: https
-    port: {{ .Values.service.httpsPort }}
-    targetPort: https
-    {{- if (and (eq .Values.service.type "NodePort") (not (empty .Values.service.nodePorts.https)))}}
-    nodePort: {{ .Values.service.nodePorts.https }}
-    {{- end }}
+    protocol: TCP
+    name: http
   selector:
-    app: {{ template "wiki.name" . }}
+    app.kubernetes.io/name: {{ template "wiki.name" $ }}
+    app.kubernetes.io/instance: {{ .Release.Name | quote }}
