--- a/dev/helm/values.yaml
+++ b/dev/helm/values.yaml
@@ -1,3 +1,30 @@
+nameOverride:
+fullnameOverride:
+
+ingress:
+  enabled: false
+  tls: false
+  hosts:
+    wiki: wiki.domain.org
+  # annotations:
+  #   kubernetes.io/ingress.class: nginx
+  #   kubernetes.io/tls-acme: "true"
+config: {} # Override config here (https://docs.requarks.io/install/config)
+replicaCount: 1
+imagePullSecret: false
+image:
+  repository: requarks/wiki
+  tag: "2.0"
+  pullPolicy: IfNotPresent
+extraEnv: {}
+service:
+  type: ClusterIP
+  port: 80
+resources: {}
+nodeSelector: {}
+tolerations: []
+affinity: {}
+
 ##
 ## Configuration values for the postgresql dependency.
 ## ref: https://github.com/kubernetes/charts/blob/master/stable/postgresql/README.md
@@ -8,21 +35,21 @@ postgresql:
   enabled: true
   ##
   ## If you are bringing your own PostgreSQL, you should set postgresHost and
-  ## also probably service.port, postgresUser, postgresPassword, and postgresDatabase
+  ## also probably service.port, postgresqlUser, postgresqlPassword, and postgresqlDatabase
   ## postgresHost:
   ##
   ## PostgreSQL port
   service:
     port: 5432
   ## PostgreSQL User to create.
-  postgresUser: wiki
+  postgresqlUser: wiki
   ##
   ## PostgreSQL Password for the new user.
   ## If not set, a random 10 characters password will be used.
-  postgresPassword: wikijsrocks
+  postgresqlPassword: wikijsrocks
   ##
   ## PostgreSQL Database to create.
-  postgresDatabase: wiki
+  postgresqlDatabase: wiki
   ##
   ## Persistent Volume Storage configuration.
   ## ref: https://kubernetes.io/docs/user-guide/persistent-volumes
