fix: add ha config to K8s base config

--- a/dev/helm/config/config.base.yml
+++ b/dev/helm/config/config.base.yml
@@ -130,6 +130,15 @@ uploads:
 offline: false
 
 # ---------------------------------------------------------------------
+# High-Availability
+# ---------------------------------------------------------------------
+# Set to true if you have multiple concurrent instances running off the
+# same DB (e.g. Kubernetes pods / load balanced instances). Leave false
+# otherwise.
+
+ha: true
+
+# ---------------------------------------------------------------------
 # Data Path
 # ---------------------------------------------------------------------
 # Writeable data path used for cache and temporary user uploads.
