--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "dotize": "0.3.0",
     "elasticsearch6": "npm:@elastic/elasticsearch@6",
     "elasticsearch7": "npm:@elastic/elasticsearch@7",
+    "eventemitter2": "6.0.0",
     "emoji-regex": "9.0.0",
     "express": "4.17.1",
     "express-brute": "1.0.1",
@@ -146,6 +147,7 @@
     "pg": "8.0.2",
     "pg-hstore": "2.3.3",
     "pg-query-stream": "3.0.6",
+    "pg-pubsub": "0.5.0",
     "pg-tsquery": "8.1.0",
     "pug": "2.0.4",
     "punycode": "2.1.1",
