--- a/server/app/data.yml
+++ b/server/app/data.yml
@@ -28,6 +28,7 @@ defaults:
       maxFileSize: 5242880
       maxFiles: 10
     offline: false
+    ha: false
     # DB defaults
     api:
       isEnabled: false
