--- a/server/modules/storage/git/definition.yml
+++ b/server/modules/storage/git/definition.yml
@@ -94,11 +94,11 @@ props:
     hint: Optional - Absolute path to the Git binary, when not available in PATH. Leave empty to use the default PATH location (recommended).
     order: 50
   sshPort:
-    type: Integer
-    title: Ssh port
-    default: '22'
-    hint: Optional - Allows overriding ssh default port.
-    order: 51
+    type: Number
+    title: SSH Port
+    default: 22
+    hint: Optional - SSH Authentication Only - Allows overriding ssh default port.
+    order: 60
 actions:
   - handler: syncUntracked
     label: Add Untracked Changes
