feat: admin api - toggle state

--- a/server/app/data.yml
+++ b/server/app/data.yml
@@ -29,6 +29,8 @@ defaults:
       maxFiles: 10
     offline: false
     # DB defaults
+    api:
+      isEnabled: false
     graphEndpoint: 'https://graph.requarks.io'
     lang:
       code: en
