--- a/package.json
+++ b/package.json
@@ -141,7 +141,7 @@
     "passport-okta-oauth": "0.0.1",
     "passport-openidconnect": "0.0.2",
     "passport-saml": "1.3.3",
-    "passport-twitch": "1.0.3",
+    "passport-twitch-oauth": "1.0.0",
     "pem-jwk": "2.0.0",
     "pg": "7.18.2",
     "pg-hstore": "2.3.3",
