--- a/config.sample.yml
+++ b/config.sample.yml
@@ -130,7 +130,7 @@ offline: false
 # ---------------------------------------------------------------------
 # Set to true if you have multiple concurrent instances running off the
 # same DB (e.g. Kubernetes pods / load balanced instances). Leave false
-# otherwise.
+# otherwise. You MUST be using PostgreSQL to use this feature.
 
 ha: false
 
