--- a/dev/helm/Chart.yaml
+++ b/dev/helm/Chart.yaml
@@ -1,7 +1,11 @@
-apiVersion: v1
-name: Wiki.js
-version: 2.0.0
-appVersion: 2.0.0
+apiVersion: v2
+name: wiki
+# This is the chart version. This version number should be incremented each time you make changes
+# to the chart and its templates, including the app version.
+version: 2.0.1
+# This is the version number of the application being deployed. This version number should be
+# incremented each time you make changes to the application.
+AppVersion: latest
 description: The most powerful and extensible open source Wiki software.
 keywords:
   - wiki
@@ -10,12 +14,17 @@ keywords:
   - docs
   - reference
   - editor
-home: https://wiki.js.org
-icon: https://github.com/Requarks/wiki/raw/master/client/static/favicons/android-icon-192x192.png
-sources:
-  - https://github.com/Requarks/wiki
-maintainers:
-  - name: Nicolas Giard
-    email: github@ngpixel.com
-    url: https://github.com/NGPixel
-engine: gotpl
+# A chart can be either an 'application' or a 'library' chart.
+#
+# Application charts are a collection of templates that can be packaged into versioned archives
+# to be deployed.
+#
+# Library charts provide useful utilities or functions for the chart developer. They're included as
+# a dependency of application charts to inject those utilities and functions into the rendering
+# pipeline. Library charts do not define any templates and therefore cannot be deployed.
+type: application
+dependencies:
+  - name: postgresql
+    version: 6.5.0
+    repository: https://kubernetes-charts.storage.googleapis.com/
+    condition: postgresql.enabled
