--- a/dev/helm/templates/service.yaml
+++ b/dev/helm/templates/service.yaml
@@ -1,32 +1,15 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ template "wiki.fullname" . }}
+  name: {{ include "wiki.fullname" . }}
   labels:
-    app: {{ template "wiki.name" . }}
-    chart: {{ template "wiki.chart" . }}
-    release: {{ .Release.Name | quote }}
-    heritage: {{ .Release.Service | quote }}
+    {{- include "wiki.labels" . | nindent 4 }}
 spec:
   type: {{ .Values.service.type }}
-  {{- if .Values.service.loadBalancerIP }}
-  loadBalancerIP: {{ .Values.service.loadBalancerIP }}
-  {{- end }}
-  {{- if (or (eq .Values.service.type "LoadBalancer") (eq .Values.service.type "NodePort")) }}
-  externalTrafficPolicy: {{ .Values.service.externalTrafficPolicy | quote }}
-  {{- end }}
   ports:
-  - name: http
-    port: {{ .Values.service.port }}
-    targetPort: http
-    {{- if (and (eq .Values.service.type "NodePort") (not (empty .Values.service.nodePorts.http)))}}
-    nodePort: {{ .Values.service.nodePorts.http }}
-    {{- end }}
-  - name: https
-    port: {{ .Values.service.httpsPort }}
-    targetPort: https
-    {{- if (and (eq .Values.service.type "NodePort") (not (empty .Values.service.nodePorts.https)))}}
-    nodePort: {{ .Values.service.nodePorts.https }}
-    {{- end }}
+    - port: {{ .Values.service.port }}
+      targetPort: http
+      protocol: TCP
+      name: http
   selector:
-    app: {{ template "wiki.name" . }}
+    {{- include "wiki.selectorLabels" . | nindent 4 }}
