Added configuration option to allow searching of page content with default db plugin

--- a/server/modules/search/db/definition.yml
+++ b/server/modules/search/db/definition.yml
@@ -5,4 +5,10 @@ author: requarks.io
 logo: https://static.requarks.io/logo/database.svg
 website: https://www.requarks.io/
 isAvailable: true
-props: {}
+props:
+  allowContentSearch:
+    type: Boolean
+    title: Allow content search
+    hint: 'Should Wiki.js search page contents as well? (Warning: Very database heavy)'
+    default: false
+    order: 1
