--- a/package.json
+++ b/package.json
@@ -248,6 +248,7 @@
     "i18next-xhr-backend": "3.2.2",
     "ignore-loader": "0.1.2",
     "jest": "25.4.0",
+    "js-beautify": "1.11.0",
     "js-cookie": "2.2.1",
     "mermaid": "8.5.0",
     "mini-css-extract-plugin": "0.9.0",
