--- a/package.json
+++ b/package.json
@@ -254,6 +254,7 @@
     "mermaid": "8.5.0",
     "mini-css-extract-plugin": "0.9.0",
     "moment-duration-format": "2.3.2",
+    "moment-timezone-data-webpack-plugin": "1.3.0",
     "offline-plugin": "5.0.7",
     "optimize-css-assets-webpack-plugin": "5.0.3",
     "postcss-cssnext": "3.1.0",
