--- a/package.json
+++ b/package.json
@@ -258,6 +258,7 @@
     "moment-timezone-data-webpack-plugin": "1.3.0",
     "offline-plugin": "5.0.7",
     "optimize-css-assets-webpack-plugin": "5.0.3",
+    "pako": "1.0.11",
     "postcss-cssnext": "3.1.0",
     "postcss-flexbugs-fixes": "4.2.0",
     "postcss-flexibility": "2.0.0",
