Page-component feature with components in /Components.

--- a/package.json
+++ b/package.json
@@ -49,10 +49,12 @@
     "apollo-server-express": "2.12.0",
     "auto-load": "3.0.4",
     "aws-sdk": "2.663.0",
+    "axios": "0.19.2",
     "azure-search-client": "3.1.5",
     "bcryptjs-then": "1.0.1",
     "bluebird": "3.7.2",
     "body-parser": "1.19.0",
+    "bootstrap-vue": "2.13.1",
     "chalk": "4.0.0",
     "cheerio": "1.0.0-rc.3",
     "chokidar": "3.4.0",
@@ -85,6 +87,7 @@
     "graphql-tools": "4.0.7",
     "he": "1.2.0",
     "highlight.js": "10.0.0",
+    "http-vue-loader": "1.4.2",
     "i18next": "19.4.3",
     "i18next-express-middleware": "2.0.0",
     "i18next-node-fs-backend": "2.1.3",
