feat: extensions check + resolver

--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "cheerio": "1.0.0-rc.3",
     "chokidar": "3.4.0",
     "clean-css": "4.2.3",
+    "command-exists": "1.2.9",
     "compression": "1.7.4",
     "connect-session-knex": "1.6.0",
     "cookie-parser": "1.4.5",
@@ -162,7 +163,6 @@
     "scim-query-filter-parser": "2.0.4",
     "semver": "7.3.2",
     "serve-favicon": "2.5.0",
-    "sharp": "0.25.2",
     "simple-git": "2.4.0",
     "solr-node": "1.2.1",
     "sqlite3": "4.2.0",
