--- a/dev/containers/docker-compose.yml
+++ b/dev/containers/docker-compose.yml
@@ -49,8 +49,12 @@ services:
     ports:
       - "3000:3000"
     volumes:
-      - ../..:/wiki
-      - /wiki/node_modules
+      - ../../client:/wiki/client
+      - ../../server:/wiki/server
+      - ../../dev:/wiki/dev
+      - ../../package.json:/wiki/package.json
+      - ../../yarn.lock:/wiki/yarn.lock
+      - ../../.babelrc:/wiki/.babelrc
 
 
 volumes:
