feat: use asar for twemoji assets

--- a/package.json
+++ b/package.json
@@ -56,12 +56,14 @@
     "chalk": "4.0.0",
     "cheerio": "1.0.0-rc.3",
     "chokidar": "3.4.0",
+    "chromium-pickle-js": "0.2.0",
     "clean-css": "4.2.3",
     "command-exists": "1.2.9",
     "compression": "1.7.4",
     "connect-session-knex": "1.6.0",
     "cookie-parser": "1.4.5",
     "cors": "2.8.5",
+    "cuint": "0.2.2",
     "custom-error-instance": "2.1.2",
     "dependency-graph": "0.9.0",
     "diff": "4.0.2",
