--- a/package.json
+++ b/package.json
@@ -177,6 +177,7 @@
     "striptags": "3.1.1",
     "subscriptions-transport-ws": "0.9.17",
     "tar-fs": "2.1.0",
+    "turndown": "6.0.0",
     "twemoji": "13.0.0",
     "uslug": "1.0.4",
     "uuid": "8.2.0",
