--- a/server/modules/comments/default/definition.yml
+++ b/server/modules/comments/default/definition.yml
@@ -12,11 +12,12 @@ props:
     title: Akismet API Key
     default: ''
     hint: 'Prevent spam by using the Akismet service. Enter your API key here to enable. Leave empty to disable.'
+    maxWidth: 650
     order: 1
   minDelay:
     type: Number
     title: Post delay
     default: 30
-    hint: 'Minimum delay (in seconds) between comments per IP address.'
+    hint: 'Minimum delay (in seconds) between comments per account. Note that all guests are considered as a single account.'
     maxWidth: 400
     order: 2
