fix: dashboard invalid version on load

--- a/server/app/data.yml
+++ b/server/app/data.yml
@@ -53,6 +53,10 @@ defaults:
       theme: 'default'
       iconset: 'md'
       darkMode: false
+    features:
+      featurePageRatings: true
+      featurePageComments: true
+      featurePersonalWikis: true
     security:
       securityOpenRedirect: true
       securityIframe: true
