--- a/package.json
+++ b/package.json
@@ -72,8 +72,7 @@
     "diff2html": "3.1.7",
     "dompurify": "2.0.11",
     "dotize": "0.3.0",
-    "elasticsearch6": "npm:@elastic/elasticsearch@6",
-    "elasticsearch7": "npm:@elastic/elasticsearch@7",
+    "elasticsearch7": "npm:@elastic/elasticsearch",
     "emoji-regex": "9.0.0",
     "eventemitter2": "6.4.1",
     "express": "4.17.1",
@@ -105,12 +104,8 @@
     "lodash": "4.17.15",
     "markdown-it": "11.0.0",
     "markdown-it-abbr": "1.0.4",
-<<<<<<< HEAD
     "markdown-it-block-embed": "0.0.3",
-    "markdown-it-attrs": "3.0.2",
-=======
     "markdown-it-attrs": "3.0.3",
->>>>>>> upstream/master
     "markdown-it-emoji": "1.4.0",
     "markdown-it-expand-tabs": "1.0.13",
     "markdown-it-external-links": "0.0.6",
