Added support for client side debugging of the javascript via vscode

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,14 +3,13 @@
     // Hover to view descriptions of existing attributes.
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
+    "compounds": [
+        {
+            "name": "Server / Client Debug",
+            "configurations": ["Launch Program", "Launch Firefox Client Debug"]
+        }
+    ],
     "configurations": [
-    {
-      "type": "node",
-      "request": "attach",
-      "name": "Attach (Inspector Protocol)",
-      "port": 9229,
-      "protocol": "inspector"
-    },
         {
             "type": "node",
             "request": "launch",
@@ -23,6 +22,27 @@
             "name": "Attach to Port",
             "address": "localhost",
             "port": 9222
-        }
+        },
+        {
+            "type": "node",
+            "request": "attach",
+            "name": "Attach (Inspector Protocol)",
+            "port": 9229,
+            "protocol": "inspector"
+        },
+
+        {
+            "name": "Launch Firefox Client Debug",
+            "type": "firefox",
+            "request": "launch",
+            "url": "http://localhost:3000/",
+            "webRoot": "${workspaceFolder}/wwwroot",
+            "pathMappings": [
+                {
+                    "url": "webpack:///client",
+                    "path": "${workspaceFolder}/client"
+                }
+            ]
+        },
     ]
 }
