fix: no markdown support for underline #2072

--- a/server/modules/rendering/markdown-core/definition.yml
+++ b/server/modules/rendering/markdown-core/definition.yml
@@ -38,7 +38,7 @@ props:
     type: Boolean
     default: false
     title: Underline Support
-    hint: Enable underline by using ++underline++
+    hint: Enable underline by using _underline_
     order: 5
     public: true
   quotes:
