fix: matomo module siteId

--- a/server/modules/analytics/matomo/code.yml
+++ b/server/modules/analytics/matomo/code.yml
@@ -13,5 +13,5 @@ head: |
       g.type='text/javascript'; g.async=true; g.defer=true; g.src='{{scriptUrl}}'; s.parentNode.insertBefore(g,s);
     })();
   </script>
-  <noscript><p><img src="{{serverHost}}/matomo.php?idsite=2&amp;rec=1" style="border:0;" alt="" /></p></noscript>
+  <noscript><p><img src="{{serverHost}}/matomo.php?idsite={{siteId}}&amp;rec=1" style="border:0;" alt="" /></p></noscript>
   <!-- End Matomo Code -->
