--- a/package.json
+++ b/package.json
@@ -47,10 +47,10 @@
     "akismet-api": "5.0.0",
     "algoliasearch": "4.3.0",
     "apollo-fetch": "0.7.0",
-    "apollo-server": "2.15.0",
-    "apollo-server-express": "2.15.0",
+    "apollo-server": "2.15.1",
+    "apollo-server-express": "2.15.1",
     "auto-load": "3.0.4",
-    "aws-sdk": "2.704.0",
+    "aws-sdk": "2.709.0",
     "azure-search-client": "3.1.5",
     "bcryptjs-then": "1.0.1",
     "bluebird": "3.7.2",
@@ -69,7 +69,7 @@
     "custom-error-instance": "2.1.2",
     "dependency-graph": "0.9.0",
     "diff": "4.0.2",
-    "diff2html": "3.1.8",
+    "diff2html": "3.1.9",
     "dompurify": "2.0.12",
     "dotize": "0.3.0",
     "elasticsearch6": "npm:@elastic/elasticsearch@6",
@@ -83,18 +83,18 @@
     "filesize": "6.1.0",
     "fs-extra": "9.0.1",
     "getos": "3.2.1",
-    "graphql": "14.6.0",
+    "graphql": "15.2.0",
     "graphql-list-fields": "2.0.2",
     "graphql-rate-limit-directive": "1.2.1",
     "graphql-subscriptions": "1.1.0",
-    "graphql-tools": "4.0.7",
+    "graphql-tools": "6.0.12",
     "he": "1.2.0",
     "highlight.js": "10.1.1",
-    "i18next": "19.5.1",
+    "i18next": "19.5.4",
     "i18next-express-middleware": "2.0.0",
     "i18next-node-fs-backend": "2.1.3",
     "image-size": "0.8.3",
-    "js-base64": "2.6.1",
+    "js-base64": "2.6.2",
     "js-binary": "1.2.0",
     "js-yaml": "3.14.0",
     "jsdom": "16.2.2",
@@ -129,7 +129,7 @@
     "mysql2": "2.1.0",
     "nanoid": "3.1.10",
     "node-2fa": "1.1.2",
-    "node-cache": "5.1.1",
+    "node-cache": "5.1.2",
     "nodemailer": "6.4.10",
     "objection": "2.2.0",
     "passport": "0.4.1",
@@ -169,9 +169,9 @@
     "scim-query-filter-parser": "2.0.4",
     "semver": "7.3.2",
     "serve-favicon": "2.5.0",
-    "simple-git": "2.10.0",
+    "simple-git": "2.11.0",
     "solr-node": "1.2.1",
-    "sqlite3": "4.2.0",
+    "sqlite3": "5.0.0",
     "ssh2": "0.8.9",
     "ssh2-promise": "0.1.7",
     "striptags": "3.1.1",
@@ -183,22 +183,22 @@
     "validate.js": "0.13.1",
     "winston": "3.3.3",
     "xss": "1.0.7",
-    "yargs": "15.3.1"
+    "yargs": "15.4.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.10.3",
-    "@babel/core": "^7.10.3",
-    "@babel/plugin-proposal-class-properties": "^7.10.1",
-    "@babel/plugin-proposal-decorators": "^7.10.3",
-    "@babel/plugin-proposal-export-namespace-from": "^7.10.1",
-    "@babel/plugin-proposal-function-sent": "^7.10.1",
-    "@babel/plugin-proposal-json-strings": "^7.10.1",
-    "@babel/plugin-proposal-numeric-separator": "^7.10.1",
-    "@babel/plugin-proposal-throw-expressions": "^7.10.1",
+    "@babel/cli": "^7.10.4",
+    "@babel/core": "^7.10.4",
+    "@babel/plugin-proposal-class-properties": "^7.10.4",
+    "@babel/plugin-proposal-decorators": "^7.10.4",
+    "@babel/plugin-proposal-export-namespace-from": "^7.10.4",
+    "@babel/plugin-proposal-function-sent": "^7.10.4",
+    "@babel/plugin-proposal-json-strings": "^7.10.4",
+    "@babel/plugin-proposal-numeric-separator": "^7.10.4",
+    "@babel/plugin-proposal-throw-expressions": "^7.10.4",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/plugin-syntax-import-meta": "^7.10.1",
-    "@babel/polyfill": "^7.10.1",
-    "@babel/preset-env": "^7.10.3",
+    "@babel/plugin-syntax-import-meta": "^7.10.4",
+    "@babel/polyfill": "^7.10.4",
+    "@babel/preset-env": "^7.10.4",
     "@mdi/font": "5.3.45",
     "@panter/vue-i18next": "0.15.2",
     "@requarks/ckeditor5": "19.0.1-wiki.2",
@@ -229,7 +229,7 @@
     "clean-webpack-plugin": "3.0.0",
     "clipboard": "2.0.6",
     "codemirror": "5.55.0",
-    "copy-webpack-plugin": "6.0.2",
+    "copy-webpack-plugin": "6.0.3",
     "core-js": "3.6.5",
     "css-loader": "3.6.0",
     "cssnano": "4.1.10",
@@ -237,11 +237,11 @@
     "d3": "5.16.0",
     "duplicate-package-checker-webpack-plugin": "3.0.0",
     "epic-spinners": "1.1.0",
-    "eslint": "7.3.1",
+    "eslint": "7.4.0",
     "eslint-config-requarks": "1.0.7",
     "eslint-config-standard": "14.1.1",
     "eslint-plugin-cypress": "2.11.1",
-    "eslint-plugin-import": "2.21.2",
+    "eslint-plugin-import": "2.22.0",
     "eslint-plugin-node": "11.1.0",
     "eslint-plugin-promise": "4.2.1",
     "eslint-plugin-standard": "4.0.1",
@@ -284,7 +284,7 @@
     "raw-loader": "4.0.1",
     "resolve-url-loader": "3.1.1",
     "sass": "1.26.9",
-    "sass-loader": "8.0.2",
+    "sass-loader": "9.0.1",
     "sass-resources-loader": "2.0.3",
     "script-ext-html-webpack-plugin": "2.1.4",
     "simple-progress-webpack-plugin": "1.1.2",
@@ -300,7 +300,7 @@
     "vue-clipboards": "1.3.0",
     "vue-filepond": "6.0.2",
     "vue-hot-reload-api": "2.3.4",
-    "vue-loader": "15.9.2",
+    "vue-loader": "15.9.3",
     "vue-moment": "4.1.0",
     "vue-router": "3.3.4",
     "vue-status-indicator": "1.2.1",
@@ -308,9 +308,9 @@
     "vue2-animate": "2.1.3",
     "vuedraggable": "2.23.2",
     "vuescroll": "4.16.0",
-    "vuetify": "2.3.2",
+    "vuetify": "2.3.3",
     "vuetify-loader": "1.5.0",
-    "vuex": "3.4.0",
+    "vuex": "3.5.1",
     "vuex-pathify": "1.4.1",
     "vuex-persistedstate": "3.0.1",
     "webpack": "4.43.0",
@@ -322,10 +322,13 @@
     "webpack-modernizr-loader": "5.0.0",
     "webpack-subresource-integrity": "1.4.1",
     "webpackbar": "4.0.0",
-    "whatwg-fetch": "3.0.0",
+    "whatwg-fetch": "3.1.0",
     "write-file-webpack-plugin": "4.5.1",
     "xterm": "4.7.0",
     "zxcvbn": "4.4.2"
+  },
+  "resolutions": {
+    "apollo-server-express/**/graphql-tools": "4.0.7"
   },
   "browserslist": [
     "> 1%",
