Added axios and querystring to package.json

--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "apollo-server-express": "2.15.0",
     "auto-load": "3.0.4",
     "aws-sdk": "2.704.0",
+    "axios": "^0.19.2",
     "azure-search-client": "3.1.5",
     "bcryptjs-then": "1.0.1",
     "bluebird": "3.7.2",
@@ -159,6 +160,7 @@
     "pug": "3.0.0",
     "punycode": "2.1.1",
     "qr-image": "3.2.0",
+    "querystring": "^0.2.0",
     "raven": "2.6.4",
     "remove-markdown": "0.3.0",
     "request": "2.88.2",
