--- a/server/app/data.yml
+++ b/server/app/data.yml
@@ -55,6 +55,7 @@ defaults:
       darkMode: false
     auth:
       autoLogin: false
+      hideLocal: false
       loginBgUrl: ''
       audience: 'urn:wiki.js'
       tokenExpiration: '30m'
