feat: enforce 2fa admin setting + hide local on login screen

--- a/server/app/data.yml
+++ b/server/app/data.yml
@@ -55,6 +55,7 @@ defaults:
       darkMode: false
     auth:
       autoLogin: false
+      enforce2FA: false
       hideLocal: false
       loginBgUrl: ''
       audience: 'urn:wiki.js'
