feat: add 2 more nesting levels for toc

--- a/server/app/data.yml
+++ b/server/app/data.yml
@@ -53,6 +53,7 @@ defaults:
       theme: 'default'
       iconset: 'md'
       darkMode: false
+      tocLevel: 2
     auth:
       autoLogin: false
       enforce2FA: false
