feat: add 2 more nesting levels for toc

--- a/server/app/data.yml
+++ b/server/app/data.yml
@@ -54,6 +54,7 @@ defaults:
       iconset: 'md'
       darkMode: false
       tocLevel: 2
+      tocCollapseLevel: 2
     auth:
       autoLogin: false
       enforce2FA: false
