--- a/dev/helm/templates/service.yaml
+++ b/dev/helm/templates/service.yaml
@@ -1,15 +1,23 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "wiki.fullname" . }}
-  labels:
-    {{- include "wiki.labels" . | nindent 4 }}
+  name: {{include "wiki.fullname" .}}
+  labels: {{- include "wiki.labels" . | nindent 4 }}
+  {{- with .Values.service.annotations }}
+  annotations:
+    {{- range $key, $value := . }}
+      {{ $key }}: {{ $value | quote }}
+    {{- end }}
+  {{- end }}
 spec:
-  type: {{ .Values.service.type }}
+  type: {{.Values.service.type}}
   ports:
-    - port: {{ .Values.service.port }}
+    - port: {{.Values.service.port}}
       targetPort: http
       protocol: TCP
       name: http
-  selector:
-    {{- include "wiki.selectorLabels" . | nindent 4 }}
+    - port: {{.Values.service.httpsPort}}
+      targetPort: http
+      protocol: TCP
+      name: https
+  selector: {{- include "wiki.selectorLabels" . | nindent 4}}
