--- a/package.json
+++ b/package.json
@@ -181,6 +181,7 @@
     "uslug": "1.0.4",
     "uuid": "8.2.0",
     "validate.js": "0.13.1",
+    "video.js": "7.8.4",
     "winston": "3.3.3",
     "xss": "1.0.7",
     "yargs": "15.4.0"
