--- a/server/modules/authentication/ldap/definition.yml
+++ b/server/modules/authentication/ldap/definition.yml
@@ -7,7 +7,7 @@ color: blue darken-3
 website: https://www.microsoft.com/windowsserver
 isAvailable: true
 useForm: true
-usernameLabel: 'auth:fields.username'
+usernameType: username
 props:
   url:
     title: LDAP URL
