--- a/server/modules/authentication/local/definition.yml
+++ b/server/modules/authentication/local/definition.yml
@@ -7,5 +7,5 @@ color: primary
 website: https://wiki.js.org
 isAvailable: true
 useForm: true
-usernameLabel: 'auth:fields.email'
+usernameType: email
 props: {}
