--- a/dev/helm/templates/service.yaml
+++ b/dev/helm/templates/service.yaml
@@ -12,11 +12,11 @@ metadata:
 spec:
   type: {{.Values.service.type}}
   ports:
-    - port: {{.Values.service.port}}
+    - port: {{ default "80" .Values.service.port}}
       targetPort: http
       protocol: TCP
       name: http
-    - port: {{.Values.service.httpsPort}}
+    - port: {{ default "443" .Values.service.httpsPort}}
       targetPort: http
       protocol: TCP
       name: https
