--- a/dev/helm/templates/deployment.yaml
+++ b/dev/helm/templates/deployment.yaml
@@ -38,6 +38,8 @@ spec:
               value: {{ default "wiki" .Values.postgresql.postgresqlDatabase }}
             - name: DB_USER
               value: {{ default "wiki" .Values.postgresql.postgresqlUser }}
+            - name: DB_SSL
+              value: "{{ default "false" .Values.postgresql.ssl }}"              
             - name: DB_PASS
               valueFrom:
                 secretKeyRef:
