--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,4 +1,4 @@
-name: 2.5.$(Rev:r)
+name: 2.6.$(Rev:r)
 
 trigger:
 - dev
@@ -77,7 +77,7 @@ stages:
 
   - job: testCypress
     displayName: Cypress E2E Tests
-    dependsOn: linuxBuild
+    dependsOn: buildLinux
     strategy:
       maxParallel: 5
       matrix:
@@ -114,7 +114,7 @@ stages:
 
   - job: buildWindows
     displayName: Windows Build
-    dependsOn: linuxBuild
+    dependsOn: buildLinux
     pool:
       name: Azure Pipelines
       vmImage: windows-latest
