fix: invalid graphql dep version

--- a/package.json
+++ b/package.json
@@ -82,7 +82,7 @@
     "filesize": "6.1.0",
     "fs-extra": "9.0.1",
     "getos": "3.2.1",
-    "graphql": "15.3.0",
+    "graphql": "14.5.4",
     "graphql-list-fields": "2.0.2",
     "graphql-rate-limit-directive": "1.2.1",
     "graphql-subscriptions": "1.1.0",
@@ -251,7 +251,7 @@
     "filepond-plugin-file-validate-type": "1.2.5",
     "filesize.js": "2.0.0",
     "graphql-persisted-document-loader": "2.0.0",
-    "graphql-tag": "^2.11.0",
+    "graphql-tag": "2.11.0",
     "hammerjs": "2.0.8",
     "html-webpack-plugin": "4.5.0",
     "html-webpack-pug-plugin": "2.0.0",
