--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -4,5 +4,5 @@ contact_links:
     url: https://github.com/Requarks/wiki/discussions?discussions_q=category%3A%22Help+%2F+Questions%22
     about: Please ask and answer questions here.
   - name: Request a new feature / improvement
-    url: https://wiki.js.org/feedback
+    url: https://requarks.canny.io/wiki
     about: Submit ideas for new features or improvements.
