--- a/package.json
+++ b/package.json
@@ -72,9 +72,10 @@
     "diff2html": "3.1.7",
     "dompurify": "2.0.11",
     "dotize": "0.3.0",
-    "elasticsearch7": "npm:@elastic/elasticsearch",
-    "emoji-regex": "9.0.0",
-    "eventemitter2": "6.4.1",
+    "elasticsearch6": "npm:@elastic/elasticsearch@6",
+    "elasticsearch7": "npm:@elastic/elasticsearch@7",
+    "emoji-regex": "9.2.0",
+    "eventemitter2": "6.4.3",
     "express": "4.17.1",
     "express-brute": "1.0.1",
     "express-session": "1.17.1",
