--- a/package.json
+++ b/package.json
@@ -110,6 +110,7 @@
     "markdown-it-expand-tabs": "1.0.13",
     "markdown-it-external-links": "0.0.6",
     "markdown-it-footnote": "3.0.2",
+    "markdown-it-html5-embed": "1.0.0",
     "markdown-it-imsize": "2.0.1",
     "markdown-it-mark": "3.0.0",
     "markdown-it-mathjax": "2.0.0",
