Add possibility to set PostgreSQL Schema other than public

--- a/config.sample.yml
+++ b/config.sample.yml
@@ -29,6 +29,7 @@ db:
   user: wikijs
   pass: wikijsrocks
   db: wiki
+  schema: public # Only for choice a PostgreSQL Schema other than public
   ssl: false
 
   # Optional - PostgreSQL / MySQL / MariaDB only:
