feat: add overlay to content images via renderer

--- a/server/modules/rendering/html-tyclipso/definition.yml
+++ b/server/modules/rendering/html-tyclipso/definition.yml
@@ -1,10 +1,9 @@
 key: htmlTyclipso
-title: Post-Processor for tyclipso theme
+title: Tyclipso Theme
 description: Prepares html for the tyclipso theme
 author: tyclipso
 icon: mdi-auto-fix
 enabledDefault: true
 dependsOn: htmlCore
-step: post
 order: 100
 props: {}
